results/SVCOMP/conversational/log-boolean2-2024_03_08_20_25_13.txt
import java.util.Random;

public class boolean2 {
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == f(b);
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:9: error: cannot find symbol
    //@ ensures \result == f(b);
                             ^
  symbol:   variable b
  location: class boolean2
/home/max/Documents/JMLGPT/tmp/boolean2.java:10: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
2 errors

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == !new Random().nextBoolean();
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: error: Object allocation is not permitted in specification expressions
    //@ ensures \result == !new Random().nextBoolean();
                            ^
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == !new Random().nextBoolean();
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: error: Object allocation is not permitted in specification expressions
    //@ ensures \result == !new Random().nextBoolean();
                            ^
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

